--- a/pi Modelo Hamburgueria/views/cardapioLogado.html
+++ b/pi Modelo Hamburgueria/views/cardapioLogado.html
@@ -634,7 +634,7 @@
             display: inline-flex;
             align-items: center;
             gap: 8px;
-            background: white;
+            background: black;
             padding: 8px 15px;
             border-radius: 25px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
