--- a/pi Modelo Hamburgueria/views/cardapioLogado.html
+++ b/pi Modelo Hamburgueria/views/cardapioLogado.html
@@ -774,7 +774,7 @@
                 <a href="#" class="text-secondary mx-2"><i class="fab fa-facebook fa-lg"></i></a>
                 <a href="#" class="text-secondary mx-2"><i class="fab fa-whatsapp fa-lg"></i></a>
             </div>
-            <p class="small mb-0">&copy; 2023 Hamburgueria Artesanal. Feito com <i class="fas fa-heart text-danger"></i>
+            <p class="small mb-0">&copy; 2025 BurguerPI. Feito com <i class="fas fa-heart text-danger"></i>
                 para você.</p>
         </div>
     </footer>
